--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "azip": "^1.0.6",
     "co": "^4.6.0",
-    "sugo-agent-base": "^1.2.3",
+    "sugo-agent-base": "^1.2.5",
     "sugo-endpoint-zip": "^1.0.0"
   },
   "devDependencies": {
@@ -34,9 +34,9 @@
     "coz": "^6.0.3",
     "injectmock": "^2.0.0",
     "sg-server": "^1.2.7",
-    "sugo-agent-base": "^1.2.3",
-    "sugos-assets": "^1.1.8",
-    "sugos-ci": "^1.6.4"
+    "sugo-agent-base": "^1.2.5",
+    "sugo-ci-agent": "^1.0.1",
+    "sugos-assets": "^1.1.8"
   },
   "engines": {
     "node": ">=6",
