--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Client for sugo-endpoint-zip",
   "main": "lib",
-  "browser": "sims/browser",
+  "browser": "shim/browser",
   "scripts": {
     "prepublish": "./ci/build.js && ./ci/browser.js",
     "test": "./ci/test.js"
@@ -24,19 +24,19 @@
   },
   "homepage": "https://github.com/realglobe-Inc/sugo-agent-zip#readme",
   "dependencies": {
-    "azip": "^1.0.6",
+    "azip": "^1.0.8",
     "co": "^4.6.0",
-    "sugo-agent-base": "^1.2.5",
-    "sugo-endpoint-zip": "^1.0.0"
+    "sugo-agent-base": "^1.2.8",
+    "sugo-endpoint-zip": "^1.0.1"
   },
   "devDependencies": {
-    "ape-tmpl": "^5.0.11",
-    "coz": "^6.0.3",
+    "ape-tmpl": "^5.0.14",
+    "coz": "^6.0.14",
     "injectmock": "^2.0.0",
-    "sg-server": "^1.2.7",
-    "sugo-agent-base": "^1.2.5",
-    "sugo-ci-agent": "^1.0.1",
-    "sugos-assets": "^1.1.8"
+    "sg-server": "^1.2.8",
+    "sugo-agent-base": "^1.2.8",
+    "sugo-ci-agent": "^1.0.7",
+    "sugos-assets": "^2.0.1"
   },
   "engines": {
     "node": ">=6",
